feat: add ConsolePrinter with banner, feature headers, formatted output, ANSI colour, and summary footer